# flockbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  bot.py  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
commands/: admin.py  feedback.py  queue.py  stats.py
database/: cache_repo.py  connection.py  feedback_repo.py  match_repo.py  migrations.py  player_repo.py  schema.sql
docs/: discord-welcome.md  pi-setup.md  setup.md
events/: lfg_handler.py  on_ready.py  voice_tracker.py
scripts/: update.sh
services/: feedback_service.py  matchmaker.py  pubg_api.py  stats_service.py  welcome.py
spec/: flockbot.md
tests/: conftest.py  test_cache_repo.py  test_decay.py  test_feedback_service.py  test_matchmaker.py  test_pubg_api.py  test_rate_limiter.py  test_registration.py  test_stats_service.py  test_welcome.py
utils/: channel_names.py  cooldown.py  embeds.py  rate_limiter.py  time_helpers.py  views.py
